# GameProject

Cpp/: CMakeLists.txt
Cpp/Inc/: hello.hpp
Cpp/Src/: main.cpp
sfml/: CMakeLists.txt
sfml/Include/: AssetManager.h  Game.h  Point.h  Shape.h
sfml/Src/: AssetManager.cpp  Game.cpp  Shape.cpp  main.cpp
